Scale placeholder images according to the page zoom factor.

Before this CL, the icon and text inside placeholder images did not
scale with the page zoom factor, which caused the icons and text within
placeholder images to appear much smaller than it should when
use-zoom-for-dsf is turned on.

This CL fixes this by making the icons and text inside placeholder
images scalable, and updating this scale factor for the icons and text
whenever paint is invalidated on the enclosing LayoutImage.

Bug: 900946
Change-Id: I85ca94d5fc7755dda172566c568665895badef87
Reviewed-on: https://chromium-review.googlesource.com/c/1356265
Reviewed-by: Philip Rogers <pdr@chromium.org>
Reviewed-by: Stephen Chenney <schenney@chromium.org>
Commit-Queue: Scott Little <sclittle@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620080}