third_party/blink/renderer/platform/graphics/placeholder_image.h
@@ -22,6 +22,7 @@ namespace blink {
 class FloatPoint;
 class FloatRect;
 class FloatSize;
+class Font;
 class GraphicsContext;
 class ImageObserver;
 
@@ -63,6 +64,9 @@ class PLATFORM_EXPORT PlaceholderImage final : public Image {
   bool IsPlaceholderImage() const override;
 
   const String& GetTextForTesting() const { return text_; }
+  const Font* GetFontForTesting() const;
+
+  void SetIconAndTextScaleFactor(float icon_and_text_scale_factor);
 
  private:
   PlaceholderImage(ImageObserver*,
@@ -90,6 +94,8 @@ class PLATFORM_EXPORT PlaceholderImage final : public Image {
 
   // This placeholder image is used for lazyloading of images.
   bool is_lazy_image_;
+
+  float icon_and_text_scale_factor_ = 1.0f;
 
   class SharedFont;
   // Lazily initialized. All instances of PlaceholderImage will share the same
